--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,8 +8,16 @@
     </title>
   </head>
   <body>
-    <div>
+    <header>
+    </header>
+    <% session[:messages].each do |message| %>
+      <div>
+        <p><%= message %></p>
+      </div>
+    <% end %>
+    <% session[:messages].clear %>
+    <main>
       <%= yield %>
-    </div>
+    </main>
   </body>
 </html>
