auto escape html

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,7 +17,7 @@
     <% end %>
     <% session[:messages].clear %>
     <main>
-      <%= yield %>
+      <%== yield %>
     </main>
   </body>
 </html>
