--- a/views/index.erb
+++ b/views/index.erb
@@ -2,6 +2,7 @@
   <% @index.each do |filename| %>
     <li>
       <a href="/<%= filename %>"><%= filename %></a>
+      - <a href="/<%= filename %>/edit">Edit</a>
     </li>
   <% end %>
 </ul>
