added basic css

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,19 +1,17 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
       <%= @page_title %>
     </title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="/stylesheets/cms.css" type="text/css">
   </head>
   <body>
     <header>
     </header>
     <% session[:messages].each do |message| %>
-      <div>
-        <p><%= message %></p>
-      </div>
+      <p class="flash"><%= message %></p>
     <% end %>
     <% session[:messages].clear %>
     <main>
