--- a/public/stylesheets/cms.css
+++ b/public/stylesheets/cms.css
@@ -7,3 +7,12 @@ body {
   padding: 10px;
   background: #ffff99;
 }
+
+form.inline {
+  display: inline;
+}
+
+p.user-status {
+  font-style: italic;
+  font-size: 0.9em;
+}
