--- a/views/new_document.erb
+++ b/views/new_document.erb
@@ -1,5 +1,5 @@
 <form action="/new" method="post">
-  <label for="filename">Add a new document:</label>
+  <label for="filename">Create a new document:</label>
   <div>
     <input type="text" id="filename" name="filename" value=<%= params[:filename] || ""%>>
     <button type="submit">Create</button>
