--- a/views/index.erb
+++ b/views/index.erb
@@ -27,4 +27,8 @@
   <form class="inline" action="/users/signin" method="get" >
     <button type="submit">Sign In</button>
   </form>
+
+  <form class="inline" action="/users/signup" method="get" >
+    <button type="submit">Sign Up</button>
+  </form>
 <% end %>
